# iudx-MOTION2NX

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  directory.sh  docker-compose.local-helpernode.yaml  docker-compose.remote-helpernode.yaml  docker-compose.remote.yaml  docker-compose.remote_split.yaml  docker-compose.remote_split_servermodel.yaml  docker-compose.yaml  example-docker-compose.registry.yaml  example-docker-compose.remote-registry.yaml  example-docker-compose.remote.yaml  requirements.txt  setup.sh
Dataprovider/: CMakeLists.txt
Dataprovider/image_provider/: CMakeLists.txt  Reconstruct.cpp  Reconstruct_old.cpp  dp.cpp  flatten_image.py  image_provider.cpp  image_provider_CNN.cpp  image_provider_iudx.cpp  layerno_provider.cpp  output_shares_receiver.cpp  output_shares_receiver_old.cpp  preprocess_image.py
Dataprovider/image_provider/Final_Output_Shares/: server0_shares.txt  server0_shares_X1.txt  server1_shares.txt  server1_shares_X0.txt  server1_shares_X1.txt  server1_shares_X2.txt  server1_shares_X3.txt  server1_shares_X4.txt
Dataprovider/image_provider/answer/: reconstructed_answer_img2.txt
Dataprovider/image_provider/images/: X10.csv  X11.csv  X15.csv  X2.csv  X26.csv  X27.csv  X28.csv  X35.csv  X43.csv  X447.csv  X45.csv  X56.csv  X613.csv  X619.csv  X71.csv  X74.csv  X77.csv
Dataprovider/weights_provider/: CMakeLists.txt  CNN_weights_provider_genr.cpp  CNN_weights_provider_remote.cpp  newW2.csv  weights_provider.cpp  weights_provider_genr.cpp  weights_provider_remote.cpp
Documentation2NX/: .~lock.MOTION2NX_Installation_Guide.docx#  .~lock.The Client Server Setup.docx#  Image Classification using Neural Networks.docx  Introduction To MOTION2NX.docx  MOTION2NX_Installation_Guide.docx  README.md  The Client Server Setup.docx  The World of Tensors.docx  Yao_s Millionaire Problem.docx
GUI/: File_location.py  NN.py  NN_helper.py  Readme.md  SMPC.py  five_layer.py  import1.py  main.py  (+11 more)
src/examples/: CMakeLists.txt
src/examples/Haritha_files/: 2_cnn.cpp  CMakeLists.txt  CONST_model_data_shares.cpp  Gemm_understanding.cpp  cnn.cpp  cnn_nn.cpp  const_wts_data_shares.cpp  fixed-point.h  my_const_mat_mult.cpp  my_matrix_mutiply_test.cpp  my_share_generator.cpp  test_bed.cpp
src/examples/accuracy_testing/: CMakeLists.txt  Image_Share_Generator.cpp  Image_Share_Receiver.cpp  Image_Share_Receiver_CNN.cpp  Image_Share_Receiver_old.cpp  Image_Share_Reciever.cpp  Weights_Share_Generator.cpp  Weights_Share_Receiver.cpp  Weights_Share_Receiver_CNN.cpp  Weights_Share_Receiver_remote.cpp  Weights_Share_Reciever.cpp  argmax.cpp  argmax_old.cpp  cnn.cpp  cnn_split.cpp  constant_mult_model.cpp  conv_split.cpp  final_output_provider.cpp  final_output_provider0.cpp  final_output_provider_old.cpp  layer_number_receiver.cpp  tensor_gt_mul_split.cpp  tensor_gt_mul_test.cpp  tensor_gt_relu.cpp  training.cpp  weight_share_receiver_genr.cpp
src/examples/add_mul_compare/: CMakeLists.txt  add_mul_compare.cpp
src/examples/argmax/: CMakeLists.txt  argmax.cpp  share_generator.py
src/examples/beavy_arithmetic/: CMakeLists.txt  beavy_arithmetic.cpp
src/examples/beavy_dot_product/: CMakeLists.txt  beavy_dot_product.cpp
src/examples/beavy_dot_product_copy/: CMakeLists.txt  beavy_dot_product_copy.cpp
src/examples/beavy_gemm/: CMakeLists.txt  beavy_gemm.cpp
src/examples/beavy_gemm_ramya_copy/: CMakeLists.txt  beavy_gemm_ramya_copy.cpp
src/examples/beavy_gemm_tensor_gt_debug/: CMakeLists.txt  beavy_gemm_tensor_gt_debug.cpp
src/examples/compare/: CMakeLists.txt  compare.cpp
src/examples/conversion_1/: B1.csv  B2.csv  CMakeLists.txt  W2.csv  X5_new.csv  a.out  appendfile.cpp  callgrind.out.26694  conversion_1  machine_learning.cpp  machine_learning_10.cpp  matrixmultiply_test.cpp  readfile.cpp  sharegen.cpp
src/examples/cryptonets/: cryptonets.cpp
src/examples/data_provider_dot_product_1d/: CMakeLists.txt  data_provider_dot_product_1d.cpp
src/examples/data_provider_operations/: CMakeLists.txt  data_provider_operations.cpp
src/examples/file_dot_product_1d/: CMakeLists.txt  file_dot_product_1d.cpp
src/examples/file_multiplication/: CMakeLists.txt  P0.txt  P1.txt  file_multiplication.cpp  share_generator.py
src/examples/logistic_regression/: CMakeLists.txt  training_all_labels.cpp
src/examples/millionaires_problem/: millionaires_problem.cpp
src/examples/modified_dot_product/: CMakeLists.txt  modified_dot_product.cpp
src/examples/other_stuff/: CMakeLists.txt  other_stuff.cpp
src/examples/server/: CMakeLists.txt  server0.cpp  server1.cpp  server2.cpp  server_3.cpp
src/examples/share_generator_test/: CMakeLists.txt  Image_Share_Generator.cpp  Weights_Share_Generator.cpp  share_generator_test.cpp
src/examples/srishti_version/: A.text  A.txt  A_1.txt  B.txt  B_1.txt  CMakeLists.txt  srishti_version.cpp
src/examples/tensor_constant_multiplication/: CMakeLists.txt  tensor_constant_multiplication.cpp
src/examples/tensor_dot_product/: CMakeLists.txt  dp.cpp  input_dp0.txt  input_dp1.txt  tensor_dot_product.cpp
src/examples/tensor_gt/: CMakeLists.txt  tensor_gt.cpp
src/examples/tensor_gt_mul/: CMakeLists.txt  constMul.cpp  indicator.cpp  tensor_gt_mul.cpp  tensor_gt_mul_split.cpp  tensor_gt_test_my.cpp
src/examples/tensor_gt_mul_test/: CMakeLists.txt  tensor_gt_mul_test.cpp  tensor_helper.cpp
src/examples/tensor_gt_relu/: CMakeLists.txt  tensor_gt_relu.cpp
src/examples/tensor_matrix_multiplication/: CMakeLists.txt  tensor_matrix_multiplication.cpp
src/examples/tensor_relu/: CMakeLists.txt  tensor_relu.cpp
src/examples/tensor_relu_argmax_dp/: CMakeLists.txt  tensor_relu_argmax_dp.cpp
src/examples/tensor_relu_maxpool_dp/: CMakeLists.txt  tensor_relu_maxpool_dp.cpp
src/examples/tensor_split_functionality/: A.txt  B.text  B.txt  CMakeLists.txt  Garbler.txt  S1.text  S2.text  tensor_split_functionality.cpp
src/examples/test/: CMakeLists.txt  Shares_input.cpp  argmax.cpp  constAdd.cpp  constMatMul.cpp  hamm.cpp  indicator.cpp  sigmoid.cpp  sigmoid5.cpp  sigmoidN.cpp
src/examples/test_fixed_point/: CMakeLists.txt  test_fixed_point.cpp
(+50582 files in other folders)
